# crypto_trading

./: Cargo.toml  README.md  changelog.md  issue.md
src/: lib.rs  macros.rs  utils.rs
src/adapter/: adapter_utils.rs  common.rs  mod.rs  trade.rs  users.rs
src/algorithm/: algorithm.rs
src/model/: binance_model.rs
src/port/: binance_port.rs  mod.rs
