[package]
name = "crypto_trading"
version = "0.2.2"
edition = "2021"
authors = ["KIMWOOJUN <rladnwns625@naver.com>"]
description = "Easy Binance API Wrapping Crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wangki-kyu/crypto_trading"
keywords = ["binance", "crypto", "trading"]
categories = ["api-bindings", "finance"]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
